Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -77,31 +77,6 @@ p {
     width:8%;
     z-index:10000;
 }
-
-#mainnav a {
-    color:white;
-    text-decoration: none;
-}
-
-#mainnav a:hover {
-    color:lightgray;
-    text-decoration: none;
-}
-
-#mainnav a:active {
-    color:lightslategray;
-    text-decoration: none;
-}
-
-#mainnav {
-    z-index: 9500;
-    font-family: RalewayThin;
-    background-color: #0A1939;
-    border-color: transparent;
-    background: rgb(151, 160, 230);
-    background: rgba(49, 60, 75, 0);
-}
-
 .overlay a {
     color:white;
     text-decoration: none;
@@ -125,37 +100,6 @@ p {
     margin-left: -6px;
     margin-right: -6px;
 }
-.overlay {
-    z-index: 9000;
-    background-color: #0A1939;
-    background: rgba(10, 25, 57, 0.8);
-    height: 100%;
-    width: 100%;
-
-    position: fixed;
-}
-.overlay-list {
-    z-index: 10000;
-    text-align: center;
-    font-size: 2em;
-
-    width: 90em;
-
-    position:absolute;
-    left:0; right:0;
-    top:50%;
-    margin:auto;
-
-    transform: translateY(-50%);
-
-    max-width:100%;
-    max-height:100%;
-
-    padding-left: 2px;
-    padding-right: 2px;
-
-    list-style-type: none;
-}
 .overlay-social {
     display: inline;
     list-style-type: none;
@@ -168,71 +112,9 @@ p {
     margin: 10px;
     padding: 0;
 }
-
-.schedule-container {
-    width: 3600px;
-    height: 98vh;
-    background-color: white;
-    overflow: hidden;
-}
-.schedule-marker {
-    border-right: thin solid gray;
-    width: 100px;
-    height: 100%;
-}
-
 .cover-image {
     background: url('../images/websitebkg.svg');
 }
-.about-image {
-    background: url('../images/rahma.jpg');
-}
-.faq-image {
-    background: url('../images/albert.jpg');
-}
-.question-image {
-    background: url('../images/rahma.jpg');
-}
-.schedule-image {
-    background: url('../images/pineapple.jpg');
-}
-.sponsors-image {
-    background: url('../images/aaron.jpg');
-}
-.team-image {
-    background: url('../images/rahma.jpg');
-}
-.profile {
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    width: 230px;
-    height: 300px;
-    display: inline-block;
-    vertical-align: middle;
-
-    text-align: center;
-}
-.profile .name {
-    padding-top: 15px;
-    line-height: 0.2em;
-    display: block;
-    font-size: 1.3em;
-    font-family: RalewaySemiBold, sans-serif;
-}
-.profile .title {
-    margin-top: 0px;
-    font-size: 1em;
-    font-family: RalewaySemiBold, sans-serif;
-}
-.profile img {
-    border-radius: 50%;
-    width: 165px;
-    height: 165px;
-}
-
-
 #cover {
     background-position: center top;
     background-attachment: fixed;
@@ -246,98 +128,8 @@ p {
     padding-right: 0%;
     padding-top: 0%;
     padding-bottom: 0%;
-    min-height: 540px;
     background: rgba(49, 60, 75, 0.6);
 }
-#about {
-    margin-top: 0px;
-    background: white;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-}
-#faq {
-    background: white;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-}
-#schedule {
-    background: white;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    padding-left: 0%;
-    padding-right: 0%;
-}
-#sponsors {
-    background: white;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-}
-#team {
-    background: white;
-    background-size: cover;
-    background-position: center;
-    margin-bottom: 25%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-#footer {
-    height: 10%;
-
-    background: #0A1939;
-    background-size: cover;
-    background-position: center;
-
-    padding-top: 5px;
-    padding-bottom: 5px;
-
-    color: white;
-    font-family: RalewayThin;
-    text-align: center;
-
-}
-
-#co-host img {
-    max-height: 500px;
-    max-width: 700px;
-    margin-left: 10px;
-    margin-right: 10px;
-    vertical-align: middle;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-#gold img {
-    max-height: 450px;
-    max-width: 550px;
-    margin-left: 10px;
-    margin-right: 10px;
-    vertical-align: middle;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-#silver img {
-    max-height: 225px;
-    max-width: 375px;
-    margin-left: 10px;
-    margin-right: 10px;
-    vertical-align: middle;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-#bronze img {
-    max-height: 125px;
-    max-width: 265px;
-    margin-left: 10px;
-    margin-right: 10px;
-    vertical-align: middle;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
 .slide {
     margin-top: 50vh;
     height: 100vh;
@@ -350,14 +142,23 @@ p {
     padding-bottom: 5%;
 }
 
+#header {
+    min-height: 460px;
+    height: 100vh;
+}
+#spacer {
+    min-height: 210px;
+}
+#outer-social {
+    min-height: 230px;
+}
+
 #spacer {
     height: 50vh;
-    min-height: 270px;
 }
 #outer-social {
     text-align: center;
-    height: 50%;
-    min-height: 270px;
+    height: 50vh;
 }
 #inner-social {
     top: 80%;
@@ -403,6 +204,7 @@ p {
 @media screen and (max-width:720px){
 
     .cover-content img {
+        max-width: 240px;
         width: 70%;
     }
 
